# antler

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  pyproject.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: badges.yml  ci.yml  documentation.yml  full_ci.yml  quick_ci.yml
assets/: inner.ron  placeholder.ron
assets/geometry/: cube.ron  floor.ron
assets/image/: main.ron
assets/light/: sun.ron
assets/material/: glass.ron  mirror.ron  opaque.ron  reflective.ron
assets/meshes/: tree.mtl
assets/object/: floor.ron  glass_ball.ron  golem.ron  mirror_ball.ron  test_cube.ron
assets/shader/: blue.ron  checkerboard.ron  green.ron  sunset.ron
crates/antler/: Cargo.toml
crates/camera/: Cargo.toml
crates/colour/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: camera_config.rs  capture_config.rs  config.rs  context.rs  emissive_config.rs  errors.rs  geometry_config.rs  gradient_config.rs  image_config.rs  inner_placeholder.rs  lib.rs  light_config.rs  lighting_config.rs  manifest.rs  material_config.rs  named.rs  object_config.rs  occlusion_config.rs  placeholder.rs  probe_config.rs  resolve.rs  scene_config.rs  shader_config.rs  skybox_config.rs  transform.rs  utils.rs  vec2.rs  vec3.rs
crates/config/src/errors/: config_error.rs  include_error.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  main copy.rs  main.rs  rgb.rs  rgba.rs
crates/geometry/: Cargo.toml
crates/grid/: Cargo.toml
crates/id/: Cargo.toml
crates/image/: Cargo.toml
crates/light/: Cargo.toml
crates/material/: Cargo.toml
crates/parameters/: Cargo.toml
crates/parameters/src/: capture_parameters.rs  lib.rs  scene_parameters.rs  simulation_parameters.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  probe.rs  render.rs  utils.rs
crates/scene/: Cargo.toml
crates/scene/src/: emissive.rs  lib.rs  object.rs  resources.rs  scene.rs
crates/settings/: Cargo.toml
crates/shader/: Cargo.toml
crates/skybox/: Cargo.toml
crates/storage/: Cargo.toml
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/adler32/: all.html  fn.adler32.html  index.html  struct.RollingAdler32.html
docs/ansi_rgb/: all.html  fn.black.html  fn.blue.html  fn.blue_magenta.html  fn.cyan.html  fn.cyan_blue.html  fn.green.html  fn.green_cyan.html  fn.magenta.html  fn.magenta_pink.html  fn.orange.html  fn.red.html  fn.white.html  fn.yellow.html  fn.yellow_green.html  index.html  sidebar-items.js  struct.WithBackground.html  struct.WithForeground.html  trait.Background.html  trait.Foreground.html
docs/antler/: all.html  fn.colour.html  fn.light.html  fn.main.html  fn.occlusion.html  fn.rand_circle_point.html  fn.rand_hemisphere_point.html  fn.rand_sphere_point.html  fn.sample.html  fn.shadow.html  fn.sky_colour.html  index.html  sidebar-items.js  struct.GOLDEN_RATIO.html
docs/antler_window/: all.html  fn.build.html  fn.grow.html  fn.init.html  fn.input.html  fn.main.html  index.html  struct.Parameters.html  type.Key.html
docs/approx/: all.html  index.html  macro.abs_diff_eq.html  macro.abs_diff_ne.html  macro.assert_abs_diff_eq.html  macro.assert_abs_diff_ne.html  macro.assert_relative_eq.html  macro.assert_relative_ne.html  macro.assert_ulps_eq.html  macro.assert_ulps_ne.html  macro.relative_eq.html  macro.relative_ne.html  macro.ulps_eq.html  macro.ulps_ne.html  struct.AbsDiff.html  struct.Relative.html  struct.Ulps.html  trait.AbsDiffEq.html  trait.RelativeEq.html  trait.UlpsEq.html
docs/arctk/: all.html  index.html  macro.access!.html  macro.access.html  macro.args.html  macro.clone.html  macro.fmt_report!.html  macro.fmt_report.html  macro.fmt_reports!.html  macro.fmt_reports.html  macro.map.html  macro.pause!.html  macro.pause.html  macro.report!.html  macro.report.html  macro.report_list!.html  macro.report_list.html  macro.reports!.html  macro.reports.html  sidebar-items.js
docs/arctk_attr/: all.html  attr.input.html  attr.load.html  attr.output.html  attr.save.html  index.html  sidebar-items.js
docs/arctk_proc/: all.html  derive.Input.html  derive.Load.html  derive.Output.html  derive.Save.html  index.html  sidebar-items.js
docs/bytemuck/: all.html  enum.PodCastError.html  fn.bytes_of.html  fn.bytes_of_mut.html  fn.cast.html  fn.cast_mut.html  fn.cast_ref.html  fn.cast_slice.html  fn.cast_slice_mut.html  fn.from_bytes.html  fn.from_bytes_mut.html  fn.pod_align_to.html  fn.pod_align_to_mut.html  fn.try_cast.html  fn.try_cast_mut.html  fn.try_cast_ref.html  fn.try_cast_slice.html  fn.try_cast_slice_mut.html  fn.try_from_bytes.html  fn.try_from_bytes_mut.html  index.html  macro.offset_of.html  trait.Contiguous.html  trait.Pod.html  trait.TransparentWrapper.html  trait.Zeroable.html
docs/console/: all.html  enum.Alignment.html  enum.Attribute.html  enum.Color.html  enum.Key.html  enum.TermFamily.html  enum.TermTarget.html  fn.colors_enabled.html  fn.colors_enabled_stderr.html  fn.measure_text_width.html  fn.pad_str.html  fn.pad_str_with.html  fn.set_colors_enabled.html  fn.set_colors_enabled_stderr.html  fn.strip_ansi_codes.html  fn.style.html  fn.truncate_str.html  fn.user_attended.html  fn.user_attended_stderr.html  index.html  struct.AnsiCodeIterator.html  struct.Emoji.html  struct.Style.html  struct.StyledObject.html  struct.Term.html  struct.TermFeatures.html
docs/crossbeam_channel/: all.html  enum.RecvTimeoutError.html  enum.SendTimeoutError.html  enum.TryRecvError.html  enum.TrySendError.html  fn.after.html  fn.bounded.html  fn.never.html  fn.tick.html  fn.unbounded.html  index.html  macro.select.html  struct.IntoIter.html  struct.Iter.html  struct.ReadyTimeoutError.html  (+10 more)
examples/: simple.rs
input/: blocks.json5  dino.json5  manifest.toml  parameters.json5  puddles.ron  pyramids.ron  scene.ron  scene.toml  spheres.ron  test.ron  unit.json5
legacy/: sprite.rs
script/: stitch.py
scripts/: composite.py  gen_docs.sh  generate_pyramids.py  generate_spheres.py  overview.py  plot.py  plot_log.py
src/: camera.rs  lib.rs  main.rs
(+16868 files in other folders)
