[workspace]
members = [
    "crates/camera",
    "crates/colour",
    "crates/config",
    "crates/core",
    "crates/geometry",
    "crates/grid",
    "crates/id",
    "crates/image",
    "crates/material",
    "crates/render",
    "crates/scene",
    "crates/settings",
    "crates/shader",
]
resolver = "2"

[workspace.dependencies]
nalgebra = "0.34.2"
png = "0.18.1"
rand = "0.10.1"
tobj = "4.0.3"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
