[package]
name = "antler-scene"
version = "2.0.0"
edition = "2024"

[dependencies]
antler-colour = { path = "../colour" }
antler-geometry = { path = "../geometry" }
antler-id = { path = "../id" }
antler-light = { path = "../light" }
antler-settings = { path = "../settings" }
nalgebra = { workspace = true }

[lints]
workspace = true
