[package]
name = "antler-scene"
version = "2.0.0"
edition = "2024"

[dependencies]
antler-colour = { path = "../colour" }
antler-geometry = { path = "../geometry" }
antler-id = { path = "../id" }
antler-light = { path = "../light" }
antler-material = { path = "../material" }
antler-settings = { path = "../settings" }
antler-shader = { path = "../shader" }
nalgebra = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
